--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,28 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+<ion-header>
+  <ion-toolbar class="segment-bar" mode="md">
+    <ion-row>
+      <ion-col size="10">
+        <ion-segment #mysegment mode="md" [(ngModel)]="type" swipe-gesture="false">
+          <ion-segment-button mode="md" (click)="segmentSelected(0)" value="0">
+            <ion-label>Cats</ion-label>
+          </ion-segment-button>
+          <ion-segment-button mode="md" (click)="segmentSelected(1)" value="1">
+            <ion-label>Dogs</ion-label>
+          </ion-segment-button>
+        </ion-segment>
+      </ion-col>
+    </ion-row>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <swiper (swiper)="setSwiperInstance($event)" (slideChange)="onSlideChange()" #swiper>
+      <ng-template swiperSlide>
+        <p>{{catParag}}</p>
+      </ng-template>
+      <ng-template swiperSlide>
+        <p>{{dogParag}}</p>
+      </ng-template>
+    </swiper>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
 </ion-content>
